# scout-manager

./: LICENSE  README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: Greet.svelte
