[package]
name = "scout-manager"
version = "0.0.0"
description = "A DBMS for managing scout troop data, built for my A-Level Computer Science Non-Examination Assessment (NEA)"
authors = ["Matt Adcock"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
